fixed horizontal scroll

--- a/css/landing-page/top-section.css
+++ b/css/landing-page/top-section.css
@@ -69,9 +69,7 @@
     top: -40%;
     left: -80%;
   }
-  #top .container .img .background-image {
-    margin: 15px;
-  }
+  
 }
   
   
