--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ header .menu-btn {
   margin-bottom: 40px; 
 }
 .portfolio {
+  width: 100%;
   text-align: center;
 }
 
